.deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-aws-service
spec:
  selector:
    app: rails-aws
  ports:
    - name: rails-aws-service
      port: 80
      targetPort: 3000
