.deployment/cms-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: global-#{COMPONENT_NAME}#-ingress
  annotations:
   kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - thales-global-#{COMPONENT_NAME}#-#{ENVIRONMENT}#.#{DOMAIN_NAME}#.net
    secretName: tls-secret-#{DOMAIN_NAME}#
  rules:
    - host: thales-global-#{COMPONENT_NAME}#-#{ENVIRONMENT}#.#{DOMAIN_NAME}#.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: global-#{COMPONENT_NAME}#-service
                port: 
                  number: 80
